# rcv

./: .gitignore  .mise.toml  Pipfile  README.md  check_code.py  mise.toml  pyproject.toml
docs/: nb-to-ea-financial.html
ea_race/: ea_zrp.py  zrp_test.py
nb_to_ea/: convert.py  financial.py  main.py  people.py
rcv_results/: parse_xml.py  rcv_data.py
vote_scrape/: vote_scrape.py
